--- a/package.json
+++ b/package.json
@@ -1,63 +1,161 @@
 {
-  "_from": "@babel/code-frame@^7.12.13",
-  "_id": "@babel/code-frame@7.16.0",
+  "_from": "moment@^2.24.0",
+  "_id": "moment@2.29.1",
   "_inBundle": false,
-  "_integrity": "sha512-IF4EOMEV+bfYwOmNxGzSnjR2EmQod7f1UXOpZM3l4i4o4QNwzjtJAu/HxdjHq0aYBvdqMuQEY1eg0nqW9ZPORA==",
-  "_location": "/@babel/code-frame",
+  "_integrity": "sha512-kHmoybcPV8Sqy59DwNDY3Jefr64lK/by/da0ViFcuA4DH0vQg5Q6Ze5VimxkfQNSC+Mls/Kx53s7TjP1RhFEDQ==",
+  "_location": "/moment",
   "_phantomChildren": {},
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "@babel/code-frame@^7.12.13",
-    "name": "@babel/code-frame",
-    "escapedName": "@babel%2fcode-frame",
-    "scope": "@babel",
-    "rawSpec": "^7.12.13",
+    "raw": "moment@^2.24.0",
+    "name": "moment",
+    "escapedName": "moment",
+    "rawSpec": "^2.24.0",
     "saveSpec": null,
-    "fetchSpec": "^7.12.13"
+    "fetchSpec": "^2.24.0"
   },
   "_requiredBy": [
-    "/@babel/core",
-    "/@babel/template",
-    "/@babel/traverse",
-    "/jest-message-util"
+    "/moment-timezone",
+    "/sequelize"
   ],
-  "_resolved": "https://registry.npmjs.org/@babel/code-frame/-/code-frame-7.16.0.tgz",
-  "_shasum": "0dfc80309beec8411e65e706461c408b0bb9b431",
-  "_spec": "@babel/code-frame@^7.12.13",
-  "_where": "C:\\Users\\jimmy\\OneDrive\\Desktop\\github repos\\Unit 10 homework\\node_modules\\jest-message-util",
+  "_resolved": "https://registry.npmjs.org/moment/-/moment-2.29.1.tgz",
+  "_shasum": "b2be769fa31940be9eeea6469c075e35006fa3d3",
+  "_spec": "moment@^2.24.0",
+  "_where": "C:\\Users\\jimmy\\OneDrive\\Desktop\\unit 13 homework\\node_modules\\sequelize",
   "author": {
-    "name": "The Babel Team",
-    "url": "https://babel.dev/team"
+    "name": "Iskren Ivov Chernev",
+    "email": "iskren.chernev@gmail.com",
+    "url": "https://github.com/ichernev"
   },
   "bugs": {
-    "url": "https://github.com/babel/babel/issues?utf8=%E2%9C%93&q=is%3Aissue+is%3Aopen"
+    "url": "https://github.com/moment/moment/issues"
   },
   "bundleDependencies": false,
-  "dependencies": {
-    "@babel/highlight": "^7.16.0"
-  },
+  "contributors": [
+    {
+      "name": "Tim Wood",
+      "email": "washwithcare@gmail.com",
+      "url": "http://timwoodcreates.com/"
+    },
+    {
+      "name": "Rocky Meza",
+      "url": "http://rockymeza.com"
+    },
+    {
+      "name": "Matt Johnson",
+      "email": "mj1856@hotmail.com",
+      "url": "http://codeofmatt.com"
+    },
+    {
+      "name": "Isaac Cambron",
+      "email": "isaac@isaaccambron.com",
+      "url": "http://isaaccambron.com"
+    },
+    {
+      "name": "Andre Polykanine",
+      "email": "andre@oire.org",
+      "url": "https://github.com/oire"
+    }
+  ],
   "deprecated": false,
-  "description": "Generate errors that contain a code frame that point to source locations.",
+  "description": "Parse, validate, manipulate, and display dates",
   "devDependencies": {
-    "@types/chalk": "^2.0.0",
-    "chalk": "^2.0.0",
-    "strip-ansi": "^4.0.0"
+    "benchmark": "latest",
+    "coveralls": "latest",
+    "cross-env": "^6.0.3",
+    "es6-promise": "latest",
+    "eslint": "~6",
+    "grunt": "latest",
+    "grunt-benchmark": "latest",
+    "grunt-cli": "latest",
+    "grunt-contrib-clean": "latest",
+    "grunt-contrib-concat": "latest",
+    "grunt-contrib-copy": "latest",
+    "grunt-contrib-uglify": "latest",
+    "grunt-contrib-watch": "latest",
+    "grunt-env": "latest",
+    "grunt-exec": "latest",
+    "grunt-karma": "latest",
+    "grunt-nuget": "latest",
+    "grunt-string-replace": "latest",
+    "karma": "latest",
+    "karma-chrome-launcher": "latest",
+    "karma-firefox-launcher": "latest",
+    "karma-qunit": "latest",
+    "karma-sauce-launcher": "4.1.4",
+    "load-grunt-tasks": "latest",
+    "lodash": ">=4.17.19",
+    "node-qunit": "latest",
+    "nyc": "latest",
+    "prettier": "latest",
+    "qunit": "^2.10.0",
+    "rollup": "2.17.1",
+    "typescript": "^1.8.10",
+    "typescript3": "npm:typescript@^3.1.6",
+    "uglify-js": "latest"
   },
+  "dojoBuild": "package.js",
+  "ender": "./ender.js",
   "engines": {
-    "node": ">=6.9.0"
+    "node": "*"
   },
-  "homepage": "https://babel.dev/docs/en/next/babel-code-frame",
+  "homepage": "https://momentjs.com",
+  "jsnext:main": "./dist/moment.js",
+  "jspm": {
+    "files": [
+      "moment.js",
+      "moment.d.ts",
+      "locale"
+    ],
+    "map": {
+      "moment": "./moment"
+    },
+    "buildConfig": {
+      "uglify": true
+    }
+  },
+  "keywords": [
+    "moment",
+    "date",
+    "time",
+    "parse",
+    "format",
+    "validate",
+    "i18n",
+    "l10n",
+    "ender"
+  ],
   "license": "MIT",
-  "main": "./lib/index.js",
-  "name": "@babel/code-frame",
-  "publishConfig": {
-    "access": "public"
-  },
+  "main": "./moment.js",
+  "name": "moment",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/babel/babel.git",
-    "directory": "packages/babel-code-frame"
+    "url": "git+https://github.com/moment/moment.git"
   },
-  "version": "7.16.0"
+  "scripts": {
+    "coverage": "nyc npm test && nyc report",
+    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
+    "eslint": "eslint Gruntfile.js tasks src",
+    "prettier-check": "prettier --check Gruntfile.js tasks src",
+    "prettier-fmt": "prettier --write Gruntfile.js tasks src",
+    "test": "grunt test",
+    "ts3.1-typescript-test": "cross-env node_modules/typescript3/bin/tsc --project ts3.1-typing-tests",
+    "typescript-test": "cross-env node_modules/typescript/bin/tsc --project typing-tests"
+  },
+  "spm": {
+    "main": "moment.js",
+    "output": [
+      "locale/*.js"
+    ]
+  },
+  "typesVersions": {
+    ">=3.1": {
+      "*": [
+        "ts3.1-typings/*"
+      ]
+    }
+  },
+  "typings": "./moment.d.ts",
+  "version": "2.29.1"
 }
