--- a/package.json
+++ b/package.json
@@ -1,161 +1,118 @@
 {
-  "_from": "moment@^2.24.0",
-  "_id": "moment@2.29.1",
+  "_from": "mysql2@^2.1.0",
+  "_id": "mysql2@2.3.2",
   "_inBundle": false,
-  "_integrity": "sha512-kHmoybcPV8Sqy59DwNDY3Jefr64lK/by/da0ViFcuA4DH0vQg5Q6Ze5VimxkfQNSC+Mls/Kx53s7TjP1RhFEDQ==",
-  "_location": "/moment",
-  "_phantomChildren": {},
+  "_integrity": "sha512-JUSA50rt/nSew8aq8xe3pRk5Q4y/M5QdSJn7Ey3ndOlPp2KXuialQ0sS35DNhPT5Z5PnOiIwSSQvKkl1WorqRA==",
+  "_location": "/mysql2",
+  "_phantomChildren": {
+    "safer-buffer": "2.1.2"
+  },
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "moment@^2.24.0",
-    "name": "moment",
-    "escapedName": "moment",
-    "rawSpec": "^2.24.0",
+    "raw": "mysql2@^2.1.0",
+    "name": "mysql2",
+    "escapedName": "mysql2",
+    "rawSpec": "^2.1.0",
     "saveSpec": null,
-    "fetchSpec": "^2.24.0"
+    "fetchSpec": "^2.1.0"
   },
   "_requiredBy": [
-    "/moment-timezone",
-    "/sequelize"
+    "/"
   ],
-  "_resolved": "https://registry.npmjs.org/moment/-/moment-2.29.1.tgz",
-  "_shasum": "b2be769fa31940be9eeea6469c075e35006fa3d3",
-  "_spec": "moment@^2.24.0",
-  "_where": "C:\\Users\\jimmy\\OneDrive\\Desktop\\unit 13 homework\\node_modules\\sequelize",
+  "_resolved": "https://registry.npmjs.org/mysql2/-/mysql2-2.3.2.tgz",
+  "_shasum": "3efe9814dbf1c2a3d7c2a1fc4666235939943ff9",
+  "_spec": "mysql2@^2.1.0",
+  "_where": "C:\\Users\\jimmy\\OneDrive\\Desktop\\unit 13 homework",
   "author": {
-    "name": "Iskren Ivov Chernev",
-    "email": "iskren.chernev@gmail.com",
-    "url": "https://github.com/ichernev"
+    "name": "Andrey Sidorov",
+    "email": "sidorares@yandex.ru"
   },
   "bugs": {
-    "url": "https://github.com/moment/moment/issues"
+    "url": "https://github.com/sidorares/node-mysql2/issues"
   },
   "bundleDependencies": false,
-  "contributors": [
-    {
-      "name": "Tim Wood",
-      "email": "washwithcare@gmail.com",
-      "url": "http://timwoodcreates.com/"
-    },
-    {
-      "name": "Rocky Meza",
-      "url": "http://rockymeza.com"
-    },
-    {
-      "name": "Matt Johnson",
-      "email": "mj1856@hotmail.com",
-      "url": "http://codeofmatt.com"
-    },
-    {
-      "name": "Isaac Cambron",
-      "email": "isaac@isaaccambron.com",
-      "url": "http://isaaccambron.com"
-    },
-    {
-      "name": "Andre Polykanine",
-      "email": "andre@oire.org",
-      "url": "https://github.com/oire"
-    }
-  ],
+  "dependencies": {
+    "denque": "^2.0.1",
+    "generate-function": "^2.3.1",
+    "iconv-lite": "^0.6.3",
+    "long": "^4.0.0",
+    "lru-cache": "^6.0.0",
+    "named-placeholders": "^1.1.2",
+    "seq-queue": "^0.0.5",
+    "sqlstring": "^2.3.2"
+  },
   "deprecated": false,
-  "description": "Parse, validate, manipulate, and display dates",
+  "description": "fast mysql driver. Implements core protocol, prepared statements, ssl and compression in native JS",
   "devDependencies": {
-    "benchmark": "latest",
-    "coveralls": "latest",
-    "cross-env": "^6.0.3",
-    "es6-promise": "latest",
-    "eslint": "~6",
-    "grunt": "latest",
-    "grunt-benchmark": "latest",
-    "grunt-cli": "latest",
-    "grunt-contrib-clean": "latest",
-    "grunt-contrib-concat": "latest",
-    "grunt-contrib-copy": "latest",
-    "grunt-contrib-uglify": "latest",
-    "grunt-contrib-watch": "latest",
-    "grunt-env": "latest",
-    "grunt-exec": "latest",
-    "grunt-karma": "latest",
-    "grunt-nuget": "latest",
-    "grunt-string-replace": "latest",
-    "karma": "latest",
-    "karma-chrome-launcher": "latest",
-    "karma-firefox-launcher": "latest",
-    "karma-qunit": "latest",
-    "karma-sauce-launcher": "4.1.4",
-    "load-grunt-tasks": "latest",
-    "lodash": ">=4.17.19",
-    "node-qunit": "latest",
-    "nyc": "latest",
-    "prettier": "latest",
-    "qunit": "^2.10.0",
-    "rollup": "2.17.1",
-    "typescript": "^1.8.10",
-    "typescript3": "npm:typescript@^3.1.6",
-    "uglify-js": "latest"
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "assert-diff": "^3.0.2",
+    "benchmark": "^2.1.4",
+    "error-stack-parser": "^2.0.3",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-async-await": "0.0.0",
+    "eslint-plugin-markdown": "^2.2.1",
+    "husky": "^7.0.2",
+    "is-async-supported": "^1.2.0",
+    "lint-staged": "^11.2.0",
+    "portfinder": "^1.0.28",
+    "prettier": "^2.4.1",
+    "progress": "^2.0.3",
+    "typescript": "^4.4.3",
+    "urun": "0.0.8",
+    "utest": "0.0.8"
   },
-  "dojoBuild": "package.js",
-  "ender": "./ender.js",
+  "directories": {
+    "example": "examples"
+  },
   "engines": {
-    "node": "*"
+    "node": ">= 8.0"
   },
-  "homepage": "https://momentjs.com",
-  "jsnext:main": "./dist/moment.js",
-  "jspm": {
-    "files": [
-      "moment.js",
-      "moment.d.ts",
-      "locale"
-    ],
-    "map": {
-      "moment": "./moment"
-    },
-    "buildConfig": {
-      "uglify": true
-    }
+  "exports": {
+    ".": "./index.js",
+    "./promise": "./promise.js",
+    "./promise.js": "./promise.js"
   },
+  "files": [
+    "lib",
+    "typings",
+    "index.js",
+    "index.d.ts",
+    "promise.js",
+    "promise.d.ts"
+  ],
+  "homepage": "https://github.com/sidorares/node-mysql2#readme",
   "keywords": [
-    "moment",
-    "date",
-    "time",
-    "parse",
-    "format",
-    "validate",
-    "i18n",
-    "l10n",
-    "ender"
+    "mysql",
+    "client",
+    "server"
   ],
   "license": "MIT",
-  "main": "./moment.js",
-  "name": "moment",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/moment/moment.git"
-  },
-  "scripts": {
-    "coverage": "nyc npm test && nyc report",
-    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
-    "eslint": "eslint Gruntfile.js tasks src",
-    "prettier-check": "prettier --check Gruntfile.js tasks src",
-    "prettier-fmt": "prettier --write Gruntfile.js tasks src",
-    "test": "grunt test",
-    "ts3.1-typescript-test": "cross-env node_modules/typescript3/bin/tsc --project ts3.1-typing-tests",
-    "typescript-test": "cross-env node_modules/typescript/bin/tsc --project typing-tests"
-  },
-  "spm": {
-    "main": "moment.js",
-    "output": [
-      "locale/*.js"
+  "lint-staged": {
+    "*.js": [
+      "prettier --single-quote --trailing-comma none --write",
+      "git add"
     ]
   },
-  "typesVersions": {
-    ">=3.1": {
-      "*": [
-        "ts3.1-typings/*"
-      ]
-    }
+  "main": "index.js",
+  "name": "mysql2",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sidorares/node-mysql2.git"
   },
-  "typings": "./moment.d.ts",
-  "version": "2.29.1"
+  "scripts": {
+    "benchmark": "node ./benchmarks/benchmark.js",
+    "eslint-check": "eslint --print-config .eslintrc | eslint-config-prettier-check",
+    "lint": "npm run lint:docs && npm run lint:code",
+    "lint:code": "eslint index.js promise.js \"lib/**/*.js\" \"test/**/*.js\" \"benchmarks/**/*.js\"",
+    "lint:docs": "eslint Contributing.md \"documentation/**/*.md\" \"examples/*.js\"",
+    "precommit": "lint-staged",
+    "prettier": "prettier --single-quote --trailing-comma none --write \"{lib,examples,test}/**/*.js\"",
+    "prettier:docs": "prettier --single-quote --trailing-comma none --write README.md documentation/*",
+    "test": "node ./test/run.js",
+    "wait-port": "wait-on"
+  },
+  "version": "2.3.2"
 }
