--- a/package.json
+++ b/package.json
@@ -1,118 +1,219 @@
 {
-  "_from": "mysql2@^2.1.0",
-  "_id": "mysql2@2.3.2",
+  "_from": "sequelize@^5.21.7",
+  "_id": "sequelize@5.22.4",
   "_inBundle": false,
-  "_integrity": "sha512-JUSA50rt/nSew8aq8xe3pRk5Q4y/M5QdSJn7Ey3ndOlPp2KXuialQ0sS35DNhPT5Z5PnOiIwSSQvKkl1WorqRA==",
-  "_location": "/mysql2",
-  "_phantomChildren": {
-    "safer-buffer": "2.1.2"
-  },
+  "_integrity": "sha512-xFQQ38HPg7EyDRDA+NdzMSRWbo9m6Z/RxpjnkBl3ggyQG+jRrup48x0jaw4Ox42h56wFnXOBC2NZOkTJfZeWCw==",
+  "_location": "/sequelize",
+  "_phantomChildren": {},
   "_requested": {
     "type": "range",
     "registry": true,
-    "raw": "mysql2@^2.1.0",
-    "name": "mysql2",
-    "escapedName": "mysql2",
-    "rawSpec": "^2.1.0",
+    "raw": "sequelize@^5.21.7",
+    "name": "sequelize",
+    "escapedName": "sequelize",
+    "rawSpec": "^5.21.7",
     "saveSpec": null,
-    "fetchSpec": "^2.1.0"
+    "fetchSpec": "^5.21.7"
   },
   "_requiredBy": [
     "/"
   ],
-  "_resolved": "https://registry.npmjs.org/mysql2/-/mysql2-2.3.2.tgz",
-  "_shasum": "3efe9814dbf1c2a3d7c2a1fc4666235939943ff9",
-  "_spec": "mysql2@^2.1.0",
+  "_resolved": "https://registry.npmjs.org/sequelize/-/sequelize-5.22.4.tgz",
+  "_shasum": "4dbd8a1a735e98150880d43a95d45e9f46d151fa",
+  "_spec": "sequelize@^5.21.7",
   "_where": "C:\\Users\\jimmy\\OneDrive\\Desktop\\unit 13 homework",
   "author": {
-    "name": "Andrey Sidorov",
-    "email": "sidorares@yandex.ru"
+    "name": "Sascha Depold",
+    "email": "sascha@depold.com"
   },
   "bugs": {
-    "url": "https://github.com/sidorares/node-mysql2/issues"
+    "url": "https://github.com/sequelize/sequelize/issues"
   },
   "bundleDependencies": false,
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-angular"
+    ]
+  },
+  "contributors": [
+    {
+      "name": "Sascha Depold",
+      "email": "sascha@depold.com"
+    },
+    {
+      "name": "Jan Aagaard Meier",
+      "email": "janzeh@gmail.com"
+    },
+    {
+      "name": "Daniel Durante",
+      "email": "me@danieldurante.com"
+    },
+    {
+      "name": "Mick Hansen",
+      "email": "mick.kasper.hansen@gmail.com"
+    },
+    {
+      "name": "Sushant Dhiman",
+      "email": "sushantdhiman@outlook.com"
+    }
+  ],
   "dependencies": {
-    "denque": "^2.0.1",
-    "generate-function": "^2.3.1",
-    "iconv-lite": "^0.6.3",
-    "long": "^4.0.0",
-    "lru-cache": "^6.0.0",
-    "named-placeholders": "^1.1.2",
-    "seq-queue": "^0.0.5",
-    "sqlstring": "^2.3.2"
+    "bluebird": "^3.5.0",
+    "cls-bluebird": "^2.1.0",
+    "debug": "^4.1.1",
+    "dottie": "^2.0.0",
+    "inflection": "1.12.0",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.21",
+    "retry-as-promised": "^3.2.0",
+    "semver": "^6.3.0",
+    "sequelize-pool": "^2.3.0",
+    "toposort-class": "^1.0.1",
+    "uuid": "^3.3.3",
+    "validator": "^10.11.0",
+    "wkx": "^0.4.8"
   },
   "deprecated": false,
-  "description": "fast mysql driver. Implements core protocol, prepared statements, ssl and compression in native JS",
+  "description": "Multi dialect ORM for Node.JS",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "assert-diff": "^3.0.2",
-    "benchmark": "^2.1.4",
-    "error-stack-parser": "^2.0.3",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-async-await": "0.0.0",
-    "eslint-plugin-markdown": "^2.2.1",
-    "husky": "^7.0.2",
-    "is-async-supported": "^1.2.0",
-    "lint-staged": "^11.2.0",
-    "portfinder": "^1.0.28",
-    "prettier": "^2.4.1",
-    "progress": "^2.0.3",
-    "typescript": "^4.4.3",
-    "urun": "0.0.8",
-    "utest": "0.0.8"
-  },
-  "directories": {
-    "example": "examples"
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-angular": "^8.2.0",
+    "@types/bluebird": "^3.5.26",
+    "@types/node": "^12.7.8",
+    "@types/validator": "^10.11.0",
+    "big-integer": "^1.6.45",
+    "chai": "^4.x",
+    "chai-as-promised": "^7.x",
+    "chai-datetime": "^1.x",
+    "chai-spies": "^1.x",
+    "continuation-local-storage": "^3.x",
+    "cross-env": "^5.2.1",
+    "env-cmd": "^8.0.2",
+    "esdoc": "^1.1.0",
+    "esdoc-inject-style-plugin": "^1.0.0",
+    "esdoc-standard-plugin": "^1.0.0",
+    "eslint": "^6.4.0",
+    "eslint-plugin-jsdoc": "^4.1.1",
+    "eslint-plugin-mocha": "^5.2.1",
+    "fs-jetpack": "^2.2.2",
+    "husky": "^1.3.1",
+    "js-combinatorics": "^0.5.4",
+    "lcov-result-merger": "^3.0.0",
+    "lint-staged": "^8.1.5",
+    "mariadb": "2.2.0",
+    "markdownlint-cli": "^0.18.0",
+    "mocha": "^6.1.4",
+    "mysql2": "^1.6.5",
+    "nyc": "^14.1.1",
+    "pg": "^7.8.1",
+    "pg-hstore": "^2.x",
+    "pg-types": "^2.0.0",
+    "rimraf": "^2.6.3",
+    "semantic-release": "^15.13.16",
+    "sinon": "^7.5.0",
+    "sinon-chai": "^3.3.0",
+    "sqlite3": "^4.0.6",
+    "tedious": "6.0.0",
+    "typescript": "^3.6.3"
   },
   "engines": {
-    "node": ">= 8.0"
-  },
-  "exports": {
-    ".": "./index.js",
-    "./promise": "./promise.js",
-    "./promise.js": "./promise.js"
+    "node": ">=6.0.0"
   },
   "files": [
     "lib",
-    "typings",
-    "index.js",
-    "index.d.ts",
-    "promise.js",
-    "promise.d.ts"
+    "types/index.d.ts",
+    "types/lib"
   ],
-  "homepage": "https://github.com/sidorares/node-mysql2#readme",
+  "homepage": "https://sequelize.org/",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "keywords": [
     "mysql",
-    "client",
-    "server"
+    "mariadb",
+    "sqlite",
+    "postgresql",
+    "postgres",
+    "mssql",
+    "orm",
+    "nodejs",
+    "object relational mapper"
   ],
   "license": "MIT",
   "lint-staged": {
-    "*.js": [
-      "prettier --single-quote --trailing-comma none --write",
-      "git add"
-    ]
+    "*.js": "eslint"
   },
   "main": "index.js",
-  "name": "mysql2",
+  "name": "sequelize",
+  "options": {
+    "env_cmd": "./test/config/.docker.env"
+  },
+  "publishConfig": {
+    "tag": "v5"
+  },
+  "release": {
+    "branch": "v5",
+    "verifyConditions": [
+      "@semantic-release/npm",
+      "@semantic-release/github"
+    ]
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sidorares/node-mysql2.git"
+    "url": "git+https://github.com/sequelize/sequelize.git"
   },
   "scripts": {
-    "benchmark": "node ./benchmarks/benchmark.js",
-    "eslint-check": "eslint --print-config .eslintrc | eslint-config-prettier-check",
-    "lint": "npm run lint:docs && npm run lint:code",
-    "lint:code": "eslint index.js promise.js \"lib/**/*.js\" \"test/**/*.js\" \"benchmarks/**/*.js\"",
-    "lint:docs": "eslint Contributing.md \"documentation/**/*.md\" \"examples/*.js\"",
-    "precommit": "lint-staged",
-    "prettier": "prettier --single-quote --trailing-comma none --write \"{lib,examples,test}/**/*.js\"",
-    "prettier:docs": "prettier --single-quote --trailing-comma none --write README.md documentation/*",
-    "test": "node ./test/run.js",
-    "wait-port": "wait-on"
+    "cover": "rimraf coverage && npm run teaser && npm run cover-integration && npm run cover-unit && npm run merge-coverage",
+    "cover-integration": "cross-env COVERAGE=true nyc --reporter=lcovonly mocha --require scripts/mocha-bootload -t 30000 --exit \"test/integration/**/*.test.js\" && node -e \"require('fs').renameSync('coverage/lcov.info', 'coverage/integration.info')\"",
+    "cover-unit": "cross-env COVERAGE=true nyc --reporter=lcovonly mocha --require scripts/mocha-bootload -t 30000 --exit \"test/unit/**/*.test.js\" && node -e \"require('fs').renameSync('coverage/lcov.info', 'coverage/unit.info')\"",
+    "docs": "esdoc -c docs/esdoc-config.js && node docs/run-docs-transforms.js && cp docs/favicon.ico esdoc/favicon.ico && cp docs/ROUTER.txt esdoc/ROUTER",
+    "lint": "eslint lib test --quiet",
+    "lint-docs": "markdownlint docs",
+    "merge-coverage": "lcov-result-merger \"coverage/*.info\" \"coverage/lcov.info\"",
+    "semantic-release": "semantic-release",
+    "setup-mssql": "env-cmd $npm_package_options_env_cmd ./scripts/setup-mssql",
+    "sscce": "env-cmd $npm_package_options_env_cmd node sscce.js",
+    "sscce-mariadb": "cross-env DIALECT=mariadb npm run sscce",
+    "sscce-mssql": "cross-env DIALECT=mssql npm run sscce",
+    "sscce-mysql": "cross-env DIALECT=mysql npm run sscce",
+    "sscce-postgres": "cross-env DIALECT=postgres npm run sscce",
+    "sscce-sqlite": "cross-env DIALECT=sqlite npm run sscce",
+    "teaser": "node scripts/teaser",
+    "test": "npm run teaser && npm run test-unit && npm run test-integration",
+    "test-all": "npm run test-mariadb && npm run test-mysql && npm run test-sqlite && npm run test-postgres && npm run test-postgres-native && npm run test-mssql",
+    "test-docker": "npm run test-docker-unit && npm run test-docker-integration",
+    "test-docker-integration": "env-cmd $npm_package_options_env_cmd npm run test-integration",
+    "test-docker-unit": "npm run test-unit",
+    "test-integration": "mocha --require scripts/mocha-bootload --globals setImmediate,clearImmediate --exit --check-leaks --colors -t 30000 --reporter spec \"test/integration/**/*.test.js\"",
+    "test-integration-all": "npm run test-integration-mariadb && npm run test-integration-mysql && npm run test-integration-postgres && npm run test-integration-postgres-native && npm run test-integration-mssql && npm run test-integration-sqlite",
+    "test-integration-mariadb": "cross-env DIALECT=mariadb npm run test-integration",
+    "test-integration-mssql": "cross-env DIALECT=mssql npm run test-integration",
+    "test-integration-mysql": "cross-env DIALECT=mysql npm run test-integration",
+    "test-integration-postgres": "cross-env DIALECT=postgres npm run test-integration",
+    "test-integration-postgres-native": "cross-env DIALECT=postgres-native npm run test-integration",
+    "test-integration-sqlite": "cross-env DIALECT=sqlite npm run test-integration",
+    "test-mariadb": "cross-env DIALECT=mariadb npm test",
+    "test-mssql": "cross-env DIALECT=mssql npm test",
+    "test-mysql": "cross-env DIALECT=mysql npm test",
+    "test-pgsql": "npm run test-postgres",
+    "test-postgres": "cross-env DIALECT=postgres npm test",
+    "test-postgres-native": "cross-env DIALECT=postgres-native npm test",
+    "test-postgresn": "npm run test-postgres-native",
+    "test-sqlite": "cross-env DIALECT=sqlite npm test",
+    "test-typings": "tsc -b types/tsconfig.json && tsc -b types/test/tsconfig.json",
+    "test-unit": "mocha --require scripts/mocha-bootload --globals setImmediate,clearImmediate --exit --check-leaks --colors -t 30000 --reporter spec \"test/unit/**/*.js\"",
+    "test-unit-all": "npm run test-unit-mariadb && npm run test-unit-mysql && npm run test-unit-postgres && npm run test-unit-postgres-native && npm run test-unit-mssql && npm run test-unit-sqlite",
+    "test-unit-mariadb": "cross-env DIALECT=mariadb npm run test-unit",
+    "test-unit-mssql": "cross-env DIALECT=mssql npm run test-unit",
+    "test-unit-mysql": "cross-env DIALECT=mysql npm run test-unit",
+    "test-unit-postgres": "cross-env DIALECT=postgres npm run test-unit",
+    "test-unit-postgres-native": "cross-env DIALECT=postgres-native npm run test-unit",
+    "test-unit-sqlite": "cross-env DIALECT=sqlite npm run test-unit"
   },
-  "version": "2.3.2"
+  "types": "types",
+  "version": "5.22.4"
 }
